[gd_scene load_steps=17 format=3 uid="uid://bfke2kehxv2q2"]

[ext_resource type="Texture2D" uid="uid://bkqky2sn3mki" path="res://platformer_assets/tiles_packed.png" id="1_fu0tf"]
[ext_resource type="Script" uid="uid://bcd46nk2tr5n3" path="res://world_2.gd" id="1_mv2s0"]
[ext_resource type="PackedScene" uid="uid://cpura45k2u7xe" path="res://player.tscn" id="2_mv2s0"]
[ext_resource type="AudioStream" uid="uid://easutq1j3dng" path="res://coin-257878.mp3" id="3_wys1n"]
[ext_resource type="FontFile" uid="uid://dc0hpvctg4mjk" path="res://platformer_assets/m6x11.ttf" id="4_yuvu5"]
[ext_resource type="PackedScene" uid="uid://bu4yuqo82u50r" path="res://area_2d.tscn" id="5_eiokd"]
[ext_resource type="PackedScene" uid="uid://5dk8kpptcrrd" path="res://enemy.tscn" id="7_wys1n"]
[ext_resource type="PackedScene" uid="uid://cc0k1xoewamcv" path="res://checkpoint.tscn" id="8_yuvu5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ngp3s"]
texture = ExtResource("1_fu0tf")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0

[sub_resource type="TileSet" id="TileSet_56e56"]
tile_size = Vector2i(18, 18)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ngp3s")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mv2s0"]
size = Vector2(2876.5, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yoy7d"]
bg_color = Color(0.811098, 0.574582, 0.404356, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5srx"]
bg_color = Color(0.422711, 0.270675, 0.157635, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5stuy"]
bg_color = Color(0.658729, 0.441139, 0.281152, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="LabelSettings" id="LabelSettings_lbh55"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wys1n"]
size = Vector2(17, 22.5)

[node name="world_2" type="Node2D"]
script = ExtResource("1_mv2s0")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3840.0
offset_top = -3061.0
offset_right = 4651.0
offset_bottom = 3217.0
color = Color(0.482353, 1, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(2, 5)
tile_set = SubResource("TileSet_56e56")
format = 2
layer_0/tile_data = PackedInt32Array(-65535, 131072, 0, -65536, 131072, 0, -1, 131072, 0, -2, 65536, 0, -65538, 655360, 6, -131074, 655360, 5, -65534, 196608, 0, 131085, 65536, 0, 131086, 196608, 0, -65515, 131072, 0, -65516, 65536, 0, -65514, 196608, 0, -131045, 0, 0, -131038, 0, 0, -720872, 196608, 0, -720873, 131072, 0, -720874, 131072, 0, -720875, 131072, 0, -720876, 131072, 0, -720877, 65536, 0, -786422, 131072, 0, -786421, 131072, 0, -786420, 131072, 0, -786419, 131072, 0, -786418, 196608, 0, -786425, 65536, 0, -786423, 131072, 0, -786424, 131072, 0, -1048575, 196608, 0, -1048576, 131072, 0, -983041, 131072, 0, -983042, 131072, 0, -983043, 131072, 0, -983044, 131072, 0, -983045, 65536, 0, -1245195, 196608, 0, -1638403, 131072, 0, -1638402, 131072, 0, -1638401, 131072, 0, -1703936, 131072, 0, -1703935, 196608, 0, -1769471, 655360, 6, -1835007, 655360, 5, -589792, 0, 0, -655329, 0, 0, -1245196, 65536, 0, -1638411, 65536, 0, -1638404, 131072, 0, -1638405, 131072, 0, -1638406, 131072, 0, -1638407, 131072, 0, -1638408, 131072, 0, -1638409, 131072, 0, -1638410, 131072, 0, -851945, 720896, 5, -786409, 720896, 6)

[node name="player" parent="." instance=ExtResource("2_mv2s0")]
position = Vector2(-25, -33)

[node name="Camera2D" type="Camera2D" parent="player"]
position_smoothing_enabled = true

[node name="CoinSound" type="AudioStreamPlayer2D" parent="player"]
position = Vector2(11, 34)
stream = ExtResource("3_wys1n")
volume_db = -0.175

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2(4, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(543.75, 182)
shape = SubResource("RectangleShape2D_mv2s0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 292.0
offset_right = 86.0
offset_bottom = 312.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_yoy7d")
theme_override_styles/disabled = SubResource("StyleBoxFlat_yoy7d")
theme_override_styles/hover = SubResource("StyleBoxFlat_n5srx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5stuy")
theme_override_styles/normal = SubResource("StyleBoxFlat_yoy7d")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/Button"]
layout_mode = 0
offset_left = 11.0
offset_top = 2.0
offset_right = 250.0
offset_bottom = 63.0
scale = Vector2(0.225188, 0.251627)
theme_override_font_sizes/font_size = 60
text = "Main Menu"

[node name="Label" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 3.0
offset_right = 107.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("4_yuvu5")
theme_override_font_sizes/font_size = 21
text = "Coin Cuont: 0"
label_settings = SubResource("LabelSettings_lbh55")
metadata/_edit_use_anchors_ = true

[node name="timer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 341.0
offset_top = 5.0
offset_right = 381.0
offset_bottom = 45.0

[node name="TimerLabel" type="Label" parent="CanvasLayer/timer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Time: 30"
horizontal_alignment = 1

[node name="LivesLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 242.0
offset_top = 3.0
offset_right = 315.0
offset_bottom = 19.0
text = "❤️ Lives: 3"

[node name="coins" type="Node" parent="."]

[node name="coin" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(258, 24)
scale = Vector2(0.449048, 0.467572)

[node name="coin2" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(623, -53)
scale = Vector2(0.449048, 0.467572)

[node name="coin3" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(498, -47)
scale = Vector2(0.449048, 0.467572)

[node name="coin4" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(389, -27)
scale = Vector2(0.449048, 0.467572)

[node name="coin11" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(-226, -374)
scale = Vector2(0.449048, 0.467572)

[node name="coin10" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(-27, -309)
scale = Vector2(0.449048, 0.467572)

[node name="coin9" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(-19, -492)
scale = Vector2(0.449048, 0.467572)

[node name="coin8" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(98, -266)
scale = Vector2(0.449048, 0.467572)

[node name="coin5" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(430, -207)
scale = Vector2(0.449048, 0.467572)

[node name="coin6" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(588, -174)
scale = Vector2(0.449048, 0.467572)

[node name="coin7" parent="coins" instance=ExtResource("5_eiokd")]
position = Vector2(320, -240)
scale = Vector2(0.449048, 0.467572)

[node name="Label" type="Label" parent="."]
offset_left = -42.0
offset_top = -63.0
offset_right = -2.0
offset_bottom = -49.0
text = "level 2"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-30, 342)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(59, -817)
shape = SubResource("RectangleShape2D_wys1n")

[node name="Enemy2" parent="." instance=ExtResource("7_wys1n")]
position = Vector2(-120, -475)

[node name="Enemy" parent="." instance=ExtResource("7_wys1n")]
position = Vector2(200, -222)

[node name="checkpoint" parent="." instance=ExtResource("8_yuvu5")]
position = Vector2(423, -213)

[node name="CountdownTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_3_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
